# doc-sync

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  config.py  health_check.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_example.py  run_sync_task.sh  setup_wizard.py  start_gui.sh  sync_config.json  sync_config.json.example  sync_config.template.json
config/: README.md
docs/: CHANGELOG.md  CONTRIBUTING.md  USAGE_GUIDE.md
electron-app/: electron_main.js  jest.config.js  package-lock.json  package.json  playwright.config.js
electron-app/build-assets/: .gitignore  gen-icons.sh
electron-app/gui/: index.html  renderer.js  styles.css
electron-app/playwright-report/: index.html
electron-app/resources/python/: .gitkeep
electron-app/tests/: e2e.spec.js  main.test.js
examples/: api_demo.py  converted_JMOEd6esIo.md  debug_cloud_structure.py  debug_output_JMOEd6esIo.json  markdown_convert_demo.py  sample_bitable_data.csv  test_bitable_e2e.py  test_cloud_to_local.py
examples/sample_vault/: 00_Start_Here.md  01_Rich_Content.md
examples/sample_vault/assets/: demo.txt
examples/sample_vault/nested_folder/: deep_note.md
scripts/: README.md  block_operations_demo.py  cleanup_assets.py  cli.py  compare_docs.py  download_doc.py  health_check.py  run_example.py
src/: auth.py  config.py  converter.py  feishu_client.py  logger.py  resource_index.py  restore.py  retry.py  sync.py  utils.py
src/converter/: __init__.py  feishu_to_markdown.py  markdown_to_feishu.py
src/core/: __init__.py  auth.py
src/doc_sync/: cli.py  config.py  constants.py  feishu_client.py
src/doc_sync/converter/: __init__.py  bitable_converter.py  feishu_to_markdown.py  markdown_to_feishu.py
src/doc_sync/core/: __init__.py  auth.py  restore.py  retry.py
src/doc_sync/feishu/: __init__.py  base.py  bitable.py  bitable_http.py  blocks.py  documents.py  media.py
src/doc_sync/live/: __init__.py  file_watcher.py  live_server.py  lock_manager.py
src/feishu/: __init__.py  base.py  blocks.py  documents.py  media.py
src/sync/: __init__.py  folder.py  manager.py  resource.py  state.py
tests/: conftest.py  test_block_update.py  test_checkbox.py  test_converter.py  test_feishu_to_markdown.py  test_file_watcher.py  test_folder_sync_logic.py  test_frontmatter.py  test_lock_manager.py  test_resource_index.py  test_sync_enhancements.py  test_sync_state.py  test_sync_state_recursive.py  test_sync_v2.py  test_table.py  test_utils.py
(+6 files in other folders)
